@@ -121,7 +121,7 @@ abc:NaN
 '-inf':-inf
 &bsstr
 1:1e+0
-0:0e+1
+0:0e+0
 2:2e+0
 200:2e+2
 -5:-5e+0
